--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-course",
+  "name": "webpack-boilerplate",
   "version": "1.0.0",
-  "description": "Code for Webpack 4 course.  Version 3 is at https://github.com/lawwantsin/webpack-course-v3",
+  "description": "boilerplate webpack live server",
   "main": "index.js",
   "scripts": {
     "build": "webpack --config=config/webpack.dev.js",
@@ -9,15 +9,10 @@
     "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lawwantsin/webpack-course.git"
+    "type": "git"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lawwantsin/webpack-course/issues"
-  },
-  "homepage": "https://github.com/lawwantsin/webpack-course#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
