--- a/package.json
+++ b/package.json
@@ -14,28 +14,36 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "autoprefixer": "^9.7.5",
+    "babel-cli": "*",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-async-to-promises": "^1.0.5",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "*",
+    "babel-polyfill": "*",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^3.4.2",
     "extract-loader": "^5.0.1",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.0.4",
+    "less-loader": "^5.0.0",
     "loader": "^2.1.1",
+    "node-sass": "^4.13.1",
+    "postcss": "^7.0.27",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "stylus-loader": "^3.0.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "less": "^3.11.1",
+    "stylus": "^0.54.7"
   }
 }
