--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,19 @@
 {
-    "presets": [
-      [
-        "env",
-        {
-          "targets": {
-            "browsers": ["last 2 versions"]
-          },
-          "debug": false
-        }
-      ],
-      "babel-preset-react"
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": ["last 2 versions"]
+        },
+        "debug": false
+      }
     ],
-    "plugins": ["transform-runtime", "react-hot-loader/babel"]
-  }
-  
+    "babel-preset-react"
+  ],
+  "plugins": [
+    "transform-runtime",
+    "react-hot-loader/babel",
+    ["emotion", { "sourceMap": true, "autoLabel": true }]
+  ]
+}
