--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "style-loader": "^0.20.2",
     "url-loader": "0.6.2",
     "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.10",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "2.0.6",
     "webpack-dev-server": "^3.0.0",
     "webpack-hot-middleware": "2.21.0"
@@ -31,6 +31,6 @@
     "start": "webpack-dev-server --config=config/webpack.dev.js",
     "build": "webpack --config=config/webpack.dev.js",
     "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js",
-    "prod": "node src/server/main.js"
+    "prod": "NODE_ENV=production node src/server/main.js"
   }
 }
