--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "babel-cli": "*",
     "babel-core": "*",
     "babel-loader": "^7.1.3",
+    "babel-minify": "^0.5.1",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-transform-runtime": "*",
     "babel-polyfill": "*",
     "babel-preset-env": "*",
+    "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^0.28.10",
+    "express-static-gzip": "^2.0.6",
     "extract-loader": "1.0.2",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "0.6.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^3.3.11",
@@ -29,7 +36,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config=config/webpack.dev.js",
-    "build": "webpack --config=config/webpack.dev.js",
+    "build:dev": "webpack --config=config/webpack.dev.js",
+    "build:prod": "webpack --config=config/webpack.prod.js",
     "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js",
     "prod": "NODE_ENV=production node src/server/main.js"
   }
