--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "boilerplate webpack live server",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config=config/webpack.dev.js",
+    "build:dev": "webpack --config=config/webpack.dev.js",
+    "build:prod": "webpack --config=config/webpack.prod.js",
     "start": "webpack-dev-server --config=config/webpack.dev.js",
     "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js"
   },
@@ -17,19 +18,26 @@
     "babel-cli": "*",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-transform-runtime": "*",
     "babel-polyfill": "*",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^3.4.2",
     "extract-loader": "^5.0.1",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.0.4",
     "loader": "^2.1.1",
+    "markdown-with-front-matter-loader": "^0.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "react-hot-loader": "^4.12.20",
     "style-loader": "^1.1.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.42.1",
+    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.10.3",
@@ -37,6 +45,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-static-gzip": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
