--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.20.3",
     "url-loader": "0.6.2",
+    "vue": "^2.6.11",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3",
     "webpack-dev-middleware": "2.0.6",
@@ -31,5 +32,10 @@
     "start": "webpack-dev-server --config=config/webpack.dev.js",
     "build": "webpack --config=config/webpack.dev.js",
     "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js"
+  },
+  "devDependencies": {
+    "vue-loader": "^15.9.1",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.11"
   }
 }
